domkit: fixes for text-alignment with web-font version of Roboto

--- a/src/domkit/fanCss/Button.css
+++ b/src/domkit/fanCss/Button.css
@@ -30,7 +30,7 @@ div.domkit-Button {
   outline: none;
   text-align: center;
   height: 24px;
-  line-height: 22px;
+  line-height: 24px;
 }
 
 div.domkit-Button:focus {
