--- a/src/domkit/fanCss/ProgressBar.css
+++ b/src/domkit/fanCss/ProgressBar.css
@@ -22,6 +22,6 @@ div.domkit-ProgressBar {
   outline: none;
   text-align: center;
   width: 200px;
-  height: 23px;
-  line-height: 22px;
+  height: 24px;
+  line-height: 24px;
 }
