--- a/src/domkit/fanCss/TextField.css
+++ b/src/domkit/fanCss/TextField.css
@@ -9,7 +9,7 @@
 input.domkit-TextField {
   box-sizing: border-box;
   font: 13px 'Roboto';
-  padding: 4px;
+  padding: 5px 4px 3px 4px;
   margin: 0;
   height: 24px;
 }
